@@ -1,4 +1,4 @@
-$Id: History,v 1.9 1999-11-09 21:40:43 stanaka Exp $
+$Id: History,v 1.10 2000-02-25 13:37:06 kurasige Exp $
 --------------------------------------------------
 
      =========================================================
@@ -14,6 +14,8 @@ track of all tags.
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+25-02-00 H.Kurashige
+- removed RhoZeroDefinition from PhysicsList 
 
 10th November 1999  Satoshi Tanaka (examples-V00-01-12)
 - novice/N03 is updated
