@@ -1,4 +1,4 @@
-$Id: History,v 1.3 1999-11-15 12:20:53 maire Exp $
+$Id: History,v 1.4 2000-02-25 13:37:06 kurasige Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -14,6 +14,8 @@ track of all tags.
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+25-02-00 H.Kurashige
+- removed RhoZeroDefinition from PhysicsList 
 
 15-11-99 M.Maire
 - example of user SteppingVerbose class: verbose with units
